Fixed vertical alignment

--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -1,3 +1,11 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height:100%;
+}
+
 .login-box {
   border: 2px solid #FB6542;
   width: 20%;
